# Sphinx-Minecraft

./: .gitignore  README.md  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
docs/: conf.py  index.md
sphinx_minecraft/: __init__.py
sphinx_minecraft/_static/: minecraft_sphinx.css
